# TRN-Analysis-Software_v2

./: .gitignore  CHANGELOG.md  LICENSE  README.md  USAGE_GUIDE.md  pyproject.toml  requirements.txt  setup.py
docs/: ARCHITECTURE.md  TECHNICAL_SPECS.md
scripts/: build_executable.py  setup_environment.py
src/: __init__.py  config.py  main.py
src/analysis/: batch_processor.py  comparison_module.py  peak_detector.py  spectrum_analyzer.py
src/audio/: __init__.py  audio_player.py
src/core/: calibration.py  fft_module.py  file_manager.py  psd_module.py  signal_processor.py  transmission_loss.py  trn_algorithms.py
src/gui/: main_window.py
src/reporting/: __init__.py  export_manager.py  report_generator.py
src/utilities/: constants.py  converters.py  logger.py  validator.py
