[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "trn-analysis-software"
version = "0.1.0"
description = "Professional acoustic analysis software for Target Radiated Noise calculation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Onur Akin", email = "onur456akin-cmyk@example.com"}]
keywords = ["acoustic", "analysis", "hydrophone", "TRN", "underwater", "signal-processing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
]

[project.urls]
Repository = "https://github.com/onur456akin-cmyk/TRN-Analysis-Software_v2"
BugTracker = "https://github.com/onur456akin-cmyk/TRN-Analysis-Software_v2/issues"

[tool.black]
line-length = 100
target-version = ['py38']
